added site filter to rink report
