# api/docs/swagger.yaml
@@ -388,6 +388,10 @@ paths:
         in: query
         name: city
         type: string
+      - description: Site name
+        in: query
+        name: site
+        type: string
       - description: If present returns CSV download
         in: query
         name: export
